Fix timer selector in index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <div id="timer"></div>
         <script>
-            let timer = document.querySelector("timer");
+            let timer = document.querySelector("#timer");
             const date = new Date();
             setInterval(() => {
                 timer.innerHTML = date.toLocaleTimeString();
